# Action_Chunking_Transformer_Autonomous_Driving

./: .gitignore  DATASET_COLLECTION.md  README.md  collector.html  index.html  package-lock.json  package.json  vite.config.ts
act_training/: .env.example  .gitignore  README.md  inference_server.py  modal_app.py  pyproject.toml  requirements-inference.txt  requirements-local.txt  requirements-runpod.txt  requirements.txt  runpod_launcher.py  runpod_main.py  runpod_train.py
act_training/configs/: base.json  v1.json
act_training/scripts/: __init__.py  check_v2_objective.py  download_hf_run.py  publish_code.py  run_modal.sh  runpod_bootstrap.sh  start_h100_tmux.sh
act_training/src/urban_act/: __init__.py  checkpoints.py  config.py  data.py  hub.py  inference.py  losses.py  metrics.py  model.py  plots.py  train.py
act_training/tests/: test_config.py  test_data.py  test_inference_server.py  test_metrics.py  test_model.py  test_runpod.py  test_train_download.py
datasets/: README.md
datasets/urban-vla-expert-v1/: README.md  config.yaml  schema.json
scripts/: benchmark-collector.mjs  convert_lerobot.py  dataset-control.mjs  dataset-state.node-test.mjs  dataset-supervisor.mjs  generate-dataset-manifest.mjs  publish_hf_dataset.py  qualify-expert.mjs  quality-audit.mjs  smoke-inference-playwright.mjs  smoke-playwright.mjs  start-inference.sh  validate-dataset.mjs
scripts/lib/: cli.mjs  dataset-config.mjs  (+4 more)
src/: collector.ts  main.ts  style.css  types.ts  vite-env.d.ts
vla_training/: .env.example  README.md  convert_dataset.py  evaluate.py  inference_server.py
(+43 files in other folders)
