[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-vla-language-act"
version = "0.1.0"
description = "Language-conditioned ACT training for the Urban VLA simulator dataset"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "av==15.0.0",
  "huggingface-hub==0.36.2",
  "matplotlib==3.9.2",
  "numpy==1.26.4",
  "safetensors==0.5.3",
  "torch==2.8.0",
  "torchvision==0.23.0",
  "tqdm==4.67.1",
  "transformers==4.52.3",
]

[project.optional-dependencies]
modal = ["modal==1.2.1"]
inference = [
  "fastapi==0.119.1",
  "pillow==10.4.0",
  "uvicorn[standard]==0.38.0",
]
dev = ["pytest==8.4.2", "ruff==0.12.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
